--- a/src/RedisOnAzure/RedisOnAzure.Web/Views/Shared/_Layout.cshtml
+++ b/src/RedisOnAzure/RedisOnAzure.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using System.Reflection
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <script>
+        (function() {
+            alert("Called from head");
+        }());
+    </script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -50,5 +56,16 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script>
+        var Roa;
+        (function (roa) {
+            function _onReadyToAddVersion() {
+                Roa.version = '@typeof(MvcApplication).Assembly.GetName().Version.ToString()';
+                alert(Roa.version);
+            }
+            document.addEventListener('DOMContentLoaded', _onReadyToAddVersion());
+        }(Roa || (Roa = {})));
+    </script>
 </body>
 </html>
