Cleaned up some views

--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Views/Minions/CreateMinion.cshtml
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Views/Minions/CreateMinion.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create Minion";
 }
 
-<h2>CreateMinion</h2>
+<h2>Create Minion</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,9 +12,10 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Create Minion</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <!-- NAME -->
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -23,6 +24,7 @@
             </div>
         </div>
 
+        <!-- NICKNAME -->
         <div class="form-group">
             @Html.LabelFor(model => model.Nickname, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -31,6 +33,7 @@
             </div>
         </div>
 
+        <!-- EYES QUANTITY -->
         <div class="form-group">
             @Html.LabelFor(model => model.Traits.EyesQuantity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
