--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Views/Minions/MinionDetails.cshtml
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Views/Minions/MinionDetails.cshtml
@@ -30,7 +30,7 @@
 
         <!-- EYES QUANTITY -->
         <dt>
-            @Html.DisplayNameFor(model => model.Traits.EyesQuantity)
+            Eyes Quantity
         </dt>
 
         <dd>
@@ -39,7 +39,7 @@
 
         <!-- BODY TYPE -->
         <dt>
-            @Html.DisplayNameFor(model => model.Traits.BodyType)
+            Body Type
         </dt>
 
         <dd>
@@ -48,7 +48,7 @@
 
         <!-- HAIR STYLE -->
         <dt>
-            @Html.DisplayNameFor(model => model.Traits.HairStyle)
+            Hair Style
         </dt>
 
         <dd>
@@ -61,7 +61,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Traits.Height)
+            <span>@Html.DisplayFor(model => model.Traits.Height)</span><span>cm</span>
         </dd>
 
         <!-- HATES -->
@@ -84,7 +84,7 @@
 
         <!-- MOVIE MOMENTS -->
         <dt>
-            @Html.DisplayNameFor(model => model.MovieMoments)
+            Movie Moments
         </dt>
 
         <dd>
