--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Views/Minions/MinionsList.cshtml
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Views/Minions/MinionsList.cshtml
@@ -23,13 +23,13 @@
             @Html.DisplayNameFor(model => model.Traits.Height)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Traits.EyesQuantity)
+            Eyes Quantity
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Traits.BodyType)
+            Body Type
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Traits.HairStyle)
+            Hair Style
         </th>
         @*<th>
             @Html.DisplayNameFor(model => model.MovieMoments)
@@ -49,7 +49,7 @@
             @Html.DisplayFor(modelItem => item.Nickname)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Traits.Height)
+            @Html.DisplayFor(modelItem => item.Traits.Height)<span>cm</span>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Traits.EyesQuantity)
@@ -66,7 +66,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.Id } ) |
             @Html.ActionLink("Details", "Details", new { id = item.Id} ) |
-            @*@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
